Move environment config to build step

--- a/.github/workflows/react-ci-workflow.yml
+++ b/.github/workflows/react-ci-workflow.yml
@@ -29,6 +29,8 @@ jobs:
 
     - name: Build
       run: yarn run build
+      env:
+        REACT_APP_SOCKET_HOST: ${{ secrets.REACT_APP_SOCKET_HOST }}
 
     - name: Deploy
       run: |
@@ -41,4 +43,4 @@ jobs:
         user_email: 'github-actions[bot]@users.noreply.github.com'
         github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
         repository: ${{ github.repository }}
-        REACT_APP_SOCKET_HOST: ${{ secrets.REACT_APP_SOCKET_HOST }}
+        
