🔧 Add github pages deploy script

--- a/react/package.json
+++ b/react/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Squair.github.io/react-connect-four",
   "name": "connect-four",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,7 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -21,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
