--- a/.github/workflows/react-ci-worflow.yml
+++ b/.github/workflows/react-ci-worflow.yml
@@ -25,9 +25,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
+      working-directory: './react'
       run: yarn install
 
     - name: Build
+      working-directory: './react'
       run: yarn run build
 
     - name: Deploy
