👷‍♂️ Ensure node uses transpiled js rather than running with typescript

--- a/node/package.json
+++ b/node/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "devStart": "nodemon index.ts",
-    "start": "ts-node index.ts"
+    "start": "node build/index.js",
+    "build": "tsc"
   }
 }
