--- a/react/package.json
+++ b/react/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.1",
+    "vite": "^2.8.4",
+    "vite-react": "^0.2.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -27,10 +29,9 @@
   "scripts": {
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
