--- a/react/package.json
+++ b/react/package.json
@@ -29,7 +29,7 @@
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base./",
     "serve": "vite preview"
   },
   "eslintConfig": {
