--- a/react/package.json
+++ b/react/package.json
@@ -18,11 +18,25 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.19",
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-syntax-jsx": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/dom": "^8.11.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "babel-jest": "^27.5.1",
+    "babel-preset-react-app": "^10.0.1",
     "gh-pages": "^3.2.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "jest-circus": "^27.5.1",
+    "jest-scss-transform": "^1.0.1",
+    "jest-watch-typeahead": "^1.0.0",
+    "socket.io-mock": "^1.3.2",
     "typescript": "^4.5.5"
   },
   "scripts": {
@@ -30,6 +44,8 @@
     "deploy": "gh-pages -d build",
     "start": "vite",
     "build": "tsc && vite build --base ./",
+    "test": "jest -env=jsdom",
+    "test-coverage": "jest -env=jsdom --coverage",
     "serve": "vite preview"
   },
   "eslintConfig": {
