--- a/react/.babelrc
+++ b/react/.babelrc
@@ -4,8 +4,20 @@
         "@babel/plugin-proposal-private-methods"
     ],
     "presets": [
-        "@babel/preset-env",
-        ["@babel/preset-react", { "runtime": "automatic"}],
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "node": "current"
+                }
+            }
+        ],
+        [
+            "@babel/preset-react",
+            {
+                "runtime": "automatic"
+            }
+        ],
         "@babel/preset-typescript"
     ]
 }
