👷‍♂️ Add test step to gh-pages workflow

--- a/.github/workflows/react-ci-worflow.yml
+++ b/.github/workflows/react-ci-worflow.yml
@@ -28,6 +28,10 @@ jobs:
       working-directory: './react'
       run: yarn install
 
+    - name: Test
+      working-directory: './react'
+      run: yarn run test-coverage
+
     - name: Build
       working-directory: './react'
       run: yarn run build
