--- a/react/package.json
+++ b/react/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^17.0.11",
     "babel-jest": "^27.5.1",
     "babel-preset-react-app": "^10.0.1",
+    "babel-preset-vite": "^1.0.4",
     "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
