✅👷‍♂️ Add step to report test code coverage to Codecov

--- a/.github/workflows/react-ci-worflow.yml
+++ b/.github/workflows/react-ci-worflow.yml
@@ -32,6 +32,9 @@ jobs:
       working-directory: './react'
       run: yarn run test-coverage
 
+    - name: Upload test coverage to Codecov
+      uses: codecov/codecov-action@v2
+
     - name: Deploy
       working-directory: './react'
       run: |
