--- a/react/package.json
+++ b/react/package.json
@@ -14,8 +14,7 @@
     "react-dom": "^17.0.2",
     "socket.io-client": "^4.4.1",
     "vite": "^2.8.4",
-    "vite-react": "^0.2.0",
-    "web-vitals": "^2.1.4"
+    "vite-react": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
