Upgrade to yarn 2

--- a/node/package.json
+++ b/node/package.json
@@ -19,5 +19,8 @@
     "devStart": "nodemon index.ts",
     "start": "node build/index.js",
     "build": "tsc"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.17"
   }
 }
