--- a/.github/workflows/react-ci-worflow.yml
+++ b/.github/workflows/react-ci-worflow.yml
@@ -24,6 +24,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Install
+      run: |
+        yarn policies set-version
+        yarn install --frozen-lockfile
+
     - name: Install dependencies
       working-directory: './react'
       run: yarn install
