--- a/.github/workflows/react-ci-worflow.yml
+++ b/.github/workflows/react-ci-worflow.yml
@@ -24,10 +24,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Yarn set version
-      working-directory: './react'
-      run: |
-        yarn set version stable
+    - name: Upgrade yarn
+      run: npm install yarn -g
 
     - name: Install dependencies
       working-directory: './react'
