--- a/react/package.json
+++ b/react/package.json
@@ -38,7 +38,13 @@
     "jest-scss-transform": "^1.0.1",
     "jest-watch-typeahead": "^1.0.0",
     "socket.io-mock": "^1.3.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.8.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.39",
+    "@types/node": "17.0.21",
+    "typescript": "4.8.4",
+    "@mui/material": "5.0.6"
   },
   "scripts": {
     "predeploy": "yarn run build",
