--- a/.github/workflows/react-ci-worflow.yml
+++ b/.github/workflows/react-ci-worflow.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install dependencies
       working-directory: './react'
       run: |
+        corepack enable
         yarn install
 
     - name: Test
