--- a/node/package.json
+++ b/node/package.json
@@ -7,12 +7,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.5.5",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -21,7 +18,9 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "@types/node": "^18.11.17"
+    "@types/node": "^18.11.17",
+    "@types/uuid": "^9.0.0",
+    "typescript": "^4.9.4"
   },
   "packageManager": "yarn@3.3.1"
 }
